Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
 
 <p>This game was created in 2011 by <a href="https://github.com/ravichandranjv" class="user-mention">@ravichandranjv</a> as a simple example to try out the new features of HTML5 Canvas.</p>
 
+<h3>
+<a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact</h3>
+
+<p><a href="mailto:jv.ravichandran@gmail.com">jv.ravichandran@gmail.com</a></p>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/ravichandranjv/Hangman">Hangman</a> is maintained by <a href="https://github.com/ravichandranjv">ravichandranjv</a>.</span>
 
